RESOLVED FIXED 244119
Remote-related methods leak to ImageBuffer due to RemoteResourceCacheProxy using ImageBuffer instances
https://bugs.webkit.org/show_bug.cgi?id=244119
Summary Remote-related methods leak to ImageBuffer due to RemoteResourceCacheProxy us...
Kimmo Kinnunen
Reported 2022-08-19 04:53:18 PDT
RemoteResourceCacheProxy should hold RemoteImageBufferProxy instances
Attachments
Radar WebKit Bug Importer
Comment 1 2022-08-19 04:54:43 PDT
Kimmo Kinnunen
Comment 2 2022-08-19 04:59:37 PDT
EWS
Comment 3 2022-08-23 10:15:21 PDT
Committed 253686@main (d0e581de2407): <https://commits.webkit.org/253686@main> Reviewed commits have been landed. Closing PR #3475 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.