Remote-related methods leak to ImageBuffer due to RemoteResourceCacheProxy using ImageBuffer instances https://bugs.webkit.org/show_bug.cgi?id=244119 rdar://problem/98877510

Reviewed by Simon Fraser.

RemoteResourceCacheProxy holds only RemoteImageBufferProxy instances.
Make the hash map holding the instances reflect this.

This allows us to use RemoteImageBufferProxy in RemoteResourceCacheProxy code.
This allows us to remove some RemoteImageBufferProxy-only features from ImageBuffer.

This is work towards being able to use remote image buffers across GPUP threads.

* Source/WebCore/platform/graphics/ImageBuffer.h:
(WebCore::ImageBuffer::didFlush):
(WebCore::ImageBuffer::backingStoreWillChange): Deleted.
* Source/WebKit/WebProcess/GPU/graphics/RemoteDisplayListRecorderProxy.cpp:
(WebKit::RemoteDisplayListRecorderProxy::RemoteDisplayListRecorderProxy):
(WebKit::RemoteDisplayListRecorderProxy::send):
* Source/WebKit/WebProcess/GPU/graphics/RemoteDisplayListRecorderProxy.h:
(WebKit::RemoteDisplayListRecorderProxy::send): Deleted.
* Source/WebKit/WebProcess/GPU/graphics/RemoteImageBufferProxy.cpp:
(WebKit::RemoteImageBufferProxy::~RemoteImageBufferProxy):
* Source/WebKit/WebProcess/GPU/graphics/RemoteImageBufferProxy.h:
* Source/WebKit/WebProcess/GPU/graphics/RemoteResourceCacheProxy.cpp:
(WebKit::RemoteResourceCacheProxy::cacheImageBuffer):
(WebKit::RemoteResourceCacheProxy::cachedImageBuffer const):
(WebKit::RemoteResourceCacheProxy::releaseImageBuffer):
* Source/WebKit/WebProcess/GPU/graphics/RemoteResourceCacheProxy.h:

* Source/WebCore/platform/graphics/ImageBuffer.cpp:
(WebCore::ImageBuffer::setBackend): Deleted.
* Source/WebCore/platform/graphics/ImageBuffer.h:
(WebCore::ImageBuffer::externalMemoryCost const):
(WebCore::ImageBuffer::clearBackend): Deleted.
(WebCore::ImageBuffer::setBackendInfo): Deleted.
* Source/WebCore/platform/graphics/displaylists/DisplayListImageBuffer.h:
* Source/WebKit/WebProcess/GPU/graphics/RemoteImageBufferProxy.cpp:
(WebKit::RemoteImageBufferProxy::didCreateImageBufferBackend):
(WebKit::RemoteImageBufferProxy::clearBackend):
* Source/WebKit/WebProcess/GPU/graphics/RemoteImageBufferProxy.h:
* Source/WebKit/WebProcess/GPU/graphics/RemoteRenderingBackendProxy.cpp:
(WebKit::RemoteRenderingBackendProxy::didCreateImageBufferBackend):
* Source/WebKit/WebProcess/GPU/graphics/RemoteRenderingBackendProxy.h:

Canonical link: https://commits.webkit.org/253686@main