Source/WebKit/WebProcess/GPU/graphics/RemoteImageBufferProxy.cpp
@@ -29,6 +29,7 @@
 #if ENABLE(GPU_PROCESS)
 
 #include "Logging.h"
+#include "PlatformImageBufferShareableBackend.h"
 #include "RemoteRenderingBackendProxy.h"
 #include "ThreadSafeRemoteImageBufferFlusher.h"
 #include <wtf/SystemTracing.h>
@@ -53,7 +54,7 @@ RemoteImageBufferProxy::~RemoteImageBufferProxy()
     }
 
     flushDrawingContextAsync();
-    m_remoteRenderingBackendProxy->remoteResourceCacheProxy().releaseImageBuffer(m_renderingResourceIdentifier);
+    m_remoteRenderingBackendProxy->remoteResourceCacheProxy().releaseImageBuffer(*this);
 }
 
 void RemoteImageBufferProxy::waitForDidFlushOnSecondaryThread(GraphicsContextFlushIdentifier targetFlushIdentifier)
@@ -103,6 +104,20 @@ void RemoteImageBufferProxy::backingStoreWillChange()
         return;
 
     prepareForBackingStoreChange();
+}
+
+void RemoteImageBufferProxy::didCreateImageBufferBackend(ImageBufferBackendHandle&& handle)
+{
+    ASSERT(!m_backend);
+    if (renderingMode() == RenderingMode::Accelerated && std::holds_alternative<ShareableBitmap::Handle>(handle))
+        m_backendInfo = ImageBuffer::populateBackendInfo<UnacceleratedImageBufferShareableBackend>(parameters());
+    
+    if (renderingMode() == RenderingMode::Unaccelerated)
+        m_backend = UnacceleratedImageBufferShareableBackend::create(parameters(), WTFMove(handle));
+    else if (canMapBackingStore())
+        m_backend = AcceleratedImageBufferShareableMappedBackend::create(parameters(), WTFMove(handle));
+    else
+        m_backend = AcceleratedImageBufferRemoteBackend::create(parameters(), WTFMove(handle));
 }
 
 void RemoteImageBufferProxy::waitForDidFlushWithTimeout()
@@ -208,7 +223,7 @@ void RemoteImageBufferProxy::clearBackend()
     m_needsFlush = false;
     didFlush(m_sentFlushIdentifier);
     prepareForBackingStoreChange();
-    ImageBuffer::clearBackend();
+    m_backend = nullptr;
 }
 
 GraphicsContext& RemoteImageBufferProxy::context() const
